Fix alignment issue in Register Page.html

--- a/Register.css
+++ b/Register.css
@@ -76,6 +76,7 @@ label
   max-width: 600px;
   margin-top: 10px;
   text-align: center;
+  margin-left: 30px;
 
 }
 .confirm a 
